@@ -1,0 +1,12 @@
+#!/bin/bash
+set -ex
+sudo apt-get update
+sudo apt-get -y install \
+   autoconf build-essential zlib1g-dev libjpeg-dev \
+   docbook-xsl fop xsltproc libxml2-utils inkscape imagemagick
+./autogen.sh
+./configure --enable-werror --enable-doc-maintenance \
+    --enable-show-failed-test-output
+make -j$(nproc)
+make -k check
+make distfiles.zip
