@@ -1,0 +1,13 @@
+#!/bin/bash
+set -ex
+curl -L https://www.ijg.org/files/jpegsrc.v9c.tar.gz -o jpegsrc.v9c.tar.gz
+tar xzf jpegsrc.v9c.tar.gz
+cd jpeg-9c
+./configure
+make
+sudo make install
+cd ..
+unzip distfiles/distfiles.zip
+./configure --enable-werror --enable-show-failed-test-output
+make -j$(nproc)
+make -k check
